[package]
name = "more_cargo"
version = "0.1.0"
edition = "2021"

# Hey look we're in Cargo.toml!
[profile.dev] 
opt-level = 1

# We're configuring how much optimization we want when we compile
# This is for the --release flag, dev is for normal cargo build
[profile.release]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]