[package]
name = "more_cargo"
version = "0.1.0"
edition = "2021"
# check SPDX for licenses you can put here
# if your license isn't in SPDX, use license-file
# You can do dual licenses with OR
license = "MIT OR Apache-2.0" 
description = "Super-King-Crimson's notes on Chapter 14 of the Rust Brown Book"

# Hey look we're in Cargo.toml!
[profile.dev] 
opt-level = 1

# We're configuring how much optimization we want when we compile
# This is for the --release flag, dev is for normal cargo build
[profile.release]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]